# libvbox

./: CMakeLists.txt  README.md  libvbox-config.cmake
cmake/: FindVirtualBoxSDK.cmake  check_nscleanup.cpp
include/: libvbox.h  libvbox_errors.h  libvbox_interfaces.h  libvbox_string.h  libvbox_vboxsdk_types.h  libvbox_vboxsdk_version.h.in  libvbox_wrap.h
lib/: additionsfacility.cpp  appliance.cpp  audioadapter.cpp  audiosettings.cpp  bandwidthcontrol.cpp  bandwidthgroup.cpp  biossettings.cpp  certificate.cpp  clipboardevent.cpp  cloudclient.cpp  cloudmachine.cpp  cloudnetwork.cpp  cloudprofile.cpp  cloudprofileevent.cpp  cloudprovider.cpp  cloudproviderevent.cpp  cloudprovidermanager.cpp  comstring.cpp  console.cpp  cpuchangedevent.cpp  cpuprofile.cpp  cursorpositionchangedevent.cpp  datastream.cpp  dhcpconfig.cpp  dhcpgroupcondition.cpp  dhcpserver.cpp  directory.cpp  display.cpp  displaysourcebitmap.cpp  dndbase.cpp  dndsource.cpp  dndtarget.cpp  emulatedusb.cpp  errorwrap.cpp  event.cpp  eventlistener.cpp  eventsource.cpp  extpack.cpp  extpackinstalledevent.cpp  extpackmanager.cpp  (+113 more)
